Update to exact versions in package.json, fixed bug where bootstrap hamburger icon would not auto-collapse on link click

--- a/public/css/carlsoncoder.css
+++ b/public/css/carlsoncoder.css
@@ -194,7 +194,8 @@ footer > p {
 }
 
 .familyImage {
-    margin-left:50px;
+    display: block;
+    margin: auto;
     padding-top:15px;
     padding-bottom:15px;
 }
